# json2rss

./: Cargo.toml  Dockerfile  README.md
public/: app.js  handlebars-input.js  index.html
src/: lib.rs  main.rs
testdata/: CbV.json
