[package]

name = "json2rss"
version = "0.0.1"
authors = [ "Dan Berglund <dan@berglund.io" ]

[dependencies]
rouille = "3.4.0"
rss = { version = "2.0.0", features = ["builders"] }
serde_json = "1.0"
reqwest = { version = "0.11.7", default-features = false, features = ["blocking", "rustls-tls"] }
handlebars = "4.1.6"
